crates/keron-lang/tests/corpus/errors/check/top_level_match_non_void_arm.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Void`, found `Int`
  --> 7:8
  |
7 |   _ => 42,
  |        ^^
